Fix #112, Fix #125, Fix #127, Fix #150: Resolve layout overflow (#184)
* Allow post title to wrap on mobile devices

* Resize custom title and article container to prevent overflow

* Tweak the mobile styles of the share bar to position within restyled article container

* Resolve overflow of article

* Resolve UNSAFE React method

* Revert "Resolve UNSAFE React method"

This reverts commit d1c967daa2f3d2bed65c92030be5a2efe6278f3d.

--- a/src/components/hero-banner/hero-banner.scss
+++ b/src/components/hero-banner/hero-banner.scss
@@ -86,6 +86,8 @@
   .hero-title {
     letter-spacing: 0.01rem;
     font-size: 3.2rem;
+    white-space: initial;
+    text-align: center;
   }
   .hero-subtitle {
     text-align: center;
