--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -41,3 +41,20 @@
   color: $lightgrey;
   font-style: italic;
 }
+
+@include media-breakpoint-down(xs) {
+  .post-details h3.custom-title{
+    font-size: 1.35rem;
+  }
+
+  .post-details .article-container {
+    padding: 1rem;
+    font-size: 1.25rem;
+    width: 100%;
+    margin: 0;
+  }
+
+  .post-details .article-container article{
+    width: 100%;
+  }
+}
